--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ default_language_version:
 repos:
   # Ruff - linter + formatter (replaces black, isort, flake8, etc.)
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.0
+    rev: v0.14.13
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
@@ -12,7 +12,7 @@ repos:
       - id: ruff-format
         types_or: [python, pyi]
 
-  # Pyright - strict type checking
+  # Pyright - strict type checking (1.1.408+)
   - repo: local
     hooks:
       - id: pyright
@@ -22,7 +22,7 @@ repos:
         types: [python]
         pass_filenames: false
 
-  # Vulture - dead code detection
+  # Vulture - dead code detection (2.15+)
   - repo: local
     hooks:
       - id: vulture
@@ -32,7 +32,7 @@ repos:
         types: [python]
         pass_filenames: false
 
-  # Bandit - security linting
+  # Bandit - security linting (1.7.8+)
   - repo: local
     hooks:
       - id: bandit
@@ -44,7 +44,7 @@ repos:
 
   # General hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -56,7 +56,7 @@ repos:
 
   # TypeScript/JS formatting
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
+    rev: v3.8.0
     hooks:
       - id: prettier
         types_or: [typescript, javascript, json, yaml, markdown]
