fix(ipc_backend): Use public Zone.outline API instead of private _proto
Fixes: SLF001 (Private member accessed)

**The Bug:**
The code was directly accessing `zone._proto.outline.polygons` which is
a private implementation detail, violating encapsulation and triggering
SLF001 linting errors.

**Why It Was Wrong:**
The comment claimed "kipy doesn't expose a direct setter for creating
new zones" but this is incorrect. Analysis of kicad-python source code
(kipy/board_types.py) revealed that Zone has a public `outline` property
with a proper setter:

```python
@outline.setter
def outline(self, outline: PolygonWithHoles):
    p = base_types_pb2.PolygonWithHoles()
    p.CopyFrom(outline.proto)
    del self._proto.outline.polygons[:]
    self._proto.outline.polygons.append(p)
```

The official example (examples/create_zone.py) confirms:
```python
zone.outline = polygon  # Public API
```

**The Fix:**
1. Added import: `from kipy.common_types import PolygonWithHoles`
2. Created PolygonWithHoles object and assigned the outline to it
3. Used public setter: `zone.outline = polygon`
4. Removed obsolete comment about missing API

This properly encapsulates the _proto manipulation inside kipy's public
API where it belongs, following the library's intended usage pattern.

--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,12 @@ ehthumbs.db
 .directory
 
 # ============================================================================
+# External Repositories (for analysis only - not part of project)
+# ============================================================================
+.external-repos/
+vendor/
+
+# ============================================================================
 # Temporary Files
 # ============================================================================
 *.tmp
