feat: Add integration test structure and JLCPCB API test
Creates proper test organization with integration and manual tests.

**New Structure:**

1. **tests/integration/** - Automated integration tests
   - test_jlcpcb.py: Real JLCPCB API connection test
   - Uses @pytest.mark.integration
   - Auto-skipped if credentials not configured
   - Validates API client works with real external service

2. **tests/manual/** - Manual verification scripts
   - test_ipc_backend.py: Moved from python/
   - README.md: Complete documentation of manual tests
   - Purpose: Pre-release smoke testing, debugging, demos
   - Requires KiCAD running with IPC enabled

**Changes:**

- Created tests/integration/ with JLCPCB integration test
- Created tests/manual/ with IPC backend verification scripts
- Added comprehensive README.md documenting manual test workflow
- Removed deprecated pytest.ini (migrated to pyproject.toml)
- Added pytest marker: "integration" for filtering in CI
- Updated test_ipc_backend.py imports for new location

**Usage:**

```bash
# Run all tests including integration (skips if no credentials)
pytest

# Skip integration tests (for CI without credentials)
pytest -m "not integration"

# Run only integration tests
pytest -m integration

# Run manual IPC verification
python tests/manual/test_ipc_backend.py --interactive
```

**Pytest Markers:**
- integration: Tests requiring external services (JLCPCB API)
- Future: unit, slow, platform-specific markers as needed

**Coverage Impact:**
Integration tests increase test count but focus on external APIs.
Priority remains unit tests for business logic (0.45% → 80%).

**Why Manual Tests:**
IPC tests validate real-time KiCAD UI synchronization, which is
difficult to automate without xvfb/headless setup. Current ROI
favors unit tests over complex UI automation infrastructure.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,6 +166,9 @@ filterwarnings = [
     "error",  # Treat warnings as errors
     "ignore::DeprecationWarning:pytest_asyncio",  # Allow pytest-asyncio deprecation
 ]
+markers = [
+    "integration: Integration tests requiring external services (may be skipped in CI)",
+]
 
 # =============================================================================
 # COVERAGE - SOTA 2026 Code Coverage Requirements
